force-app/main/default/objects/pcldm__Execution_Log__c/fields/pcldm__Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Apex_Job_Id__c</fullName>
    <label>Apex Job Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>