force-app/main/default/objects/pcldm__Execution_Log__c/fields/pcldm__Apex_Job_Id_Link__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Apex_Job_Id_Link__c</fullName>
    <formula>&apos;/&apos;+pcldm__Apex_Job_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This shows the Apex Job Batch id which is being executed for this particular object</inlineHelpText>
    <label>Apex Job Id Link</label>
    <type>Text</type>
</CustomField>