force-app/main/default/objects/pcldm__Execution_Log__c/fields/pcldm__End_time__c.field-meta.xml
<CustomField>
    <fullName>pcldm__End_time__c</fullName>
    <inlineHelpText>This shows the end time of the Execution log batch time of the particular object</inlineHelpText>
    <label>End time</label>
    <type>DateTime</type>
</CustomField>