force-app/main/default/objects/pcldm__Execution_Log__c/fields/pcldm__Exception_Log__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Exception_Log__c</fullName>
    <description>If any records are errored out under an Object, the exception log is provided here</description>
    <inlineHelpText>If any records are errored out under an Object, the exception log is provided here</inlineHelpText>
    <label>Exception Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>