force-app/main/default/objects/pcldm__Execution_Log__c/fields/pcldm__Execution__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Execution__c</fullName>
    <label>Execution</label>
    <referenceTo>pcldm__Execution__c</referenceTo>
    <relationshipLabel>Execution Logs</relationshipLabel>
    <relationshipName>Execution_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>