force-app/main/default/objects/pcldm__Execution_Log__c/fields/pcldm__Execution_Log_Status__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Execution_Log_Status__c</fullName>
    <formula>IMAGE(&quot;/img/samples/color_green.gif&quot;,&quot;green&quot;,10,( ROUND (  pcldm__Records_Processed__c  / pcldm__Records_Total__c,2 )*100)) &amp;
IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;red&quot;,10, 100 - (ROUND( pcldm__Records_Processed__c  /   pcldm__Records_Total__c  ,2)*100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execution Log Status</label>
    <type>Text</type>
</CustomField>