force-app/main/default/objects/pcldm__Execution_Log__c/fields/pcldm__Object_Masking__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Object_Masking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Object Masking</label>
    <referenceTo>pcldm__Object_Masking__c</referenceTo>
    <relationshipLabel>Execution Logs</relationshipLabel>
    <relationshipName>Execution_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>