force-app/main/default/objects/pcldm__Execution_Log__c/fields/pcldm__Records_Errored__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Records_Errored__c</fullName>
    <description>Shows the number of Records Errored for Deletion or Masking for this Object queried under the Masking Batch</description>
    <inlineHelpText>Shows the number of Records Errored for Deletion or Masking for this Object queried under the Masking Batch</inlineHelpText>
    <label>Records Errored</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>