force-app/main/default/objects/pcldm__Execution_Log__c/fields/pcldm__Records_Total__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Records_Total__c</fullName>
    <description>Shows the total number of Records for Deletion or Masking for this Object queried under the Masking Batch</description>
    <inlineHelpText>Shows the total number of Records for Deletion or Masking for this Object queried under the Masking Batch</inlineHelpText>
    <label>Records Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>