force-app/main/default/objects/pcldm__Execution_Log__c/fields/pcldm__Start_time__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Start_time__c</fullName>
    <inlineHelpText>This shows the start time of the Execution log batch time of the particular object</inlineHelpText>
    <label>Start time</label>
    <type>DateTime</type>
</CustomField>