force-app/main/default/objects/pcldm__Execution_Log__c/fields/pcldm__Status__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Status__c</fullName>
    <description>Shows the status of the Cycle Log batch for this objec</description>
    <inlineHelpText>Shows the status of the Cycle Log batch for this objec</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Errored</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Masked</fullName>
            </value>
            <value>
                <fullName>Awaiting Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>